# sonora-test

./: .env.example  Dockerfile  README.md  bot.py  conversation_logger.py  database_service.py  docker-compose.yml  index_documents.py  knowledge_base.py  pcc-deploy.toml  pyproject.toml  rag_service.py  start.py  test_supabase.py
app/: prompts.py
app/actions/: conversation_handler.py
app/api/: __init__.py  chat_api.py
app/core/: knowledge_base.py
app/pipeline/: vision_processor.py
app/services/: database.py  rag.py  tuguia_database.py
app/tools/: bot_tools.py  definitions.py
docs/workflow_backups/: Cerebro Sonora - Fixed.json
pipecat/Fundamentals/: 01-custom-frameProcessor.md  02-detecting-idle-users.md  03-user-input-muting-sttmutefilter.md  04-recording-conversation-audio.md  05-saving-conversation-transcripts.md  06-voicemail-detection.md  07-IVR-navigation.md  08-metrics.md  09-pipecat-flows.md  10-noise-cancellation-krisp.md  11-noise-cancellation-krisp-viva.md  12-whatsapp-business-calling-api.md  13-building-gemini-live.md  14-building-openai-audio-models-apis.md
pipecat/Get started/: quickstart.md
pipecat/LearningPipecat/: 01-overview-of-pipecat.md  02-session-initialization.md  03-pipeline-frame-processing.md  04-transports.md  05-speech-input-turn-detection.md  06-speech-to-text.md  (+5 more)
scripts/: check_users_table.py  index_documents.py  test_admin_api.py  test_count_by_rubro.py  test_count_by_subcategory.py  test_create_tuguia_user.py  test_tuguia_connection.py  test_user_tools.py  verify_db_setup.py
sonora_app/: context.py  prompts.py
(+16 files in other folders)
