[project]
name = "pipecat-quickstart"
version = "0.1.0"
description = "Quickstart example for building voice AI bots with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[webrtc,daily,silero,deepgram,openai,cartesia,local-smart-turn-v3,runner]  ; sys_platform != 'win32'",
    "pipecat-ai[webrtc,silero,deepgram,openai,cartesia,local-smart-turn-v3,runner]  ; sys_platform == 'win32'",
    "pipecat-ai-cli",
    "aiohttp>=3.13.2",
    "openai>=2.8.1",
    "supabase>=2.24.0",
    "tiktoken>=0.12.0",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]

[tool.uv]
# Resolver para plataformas Linux además de Windows local
environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32'",
]
